--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -28,8 +28,17 @@ $font26: 26px;
 $font29: 29px;
 $font32: 32px;
 $font35: 35px;
-$font48: 48px;
+$font48: 48px; 
 $font61: 61px;
+
+
+$res-font20: 20px;
+$res-font30: 30px;
+$res-font36: 36px;
+$res-font45: 45px;
+
+
+
 /*******************************************************************************
 ******************************* LINE HEIGHT *******************************
 *******************************************************************************/
@@ -48,6 +57,12 @@ $leading46: 46px;
 $leading53: 53px;
 $leading61: 61px;
 
+
+$res-leading23: 23px;
+$res-leading36: 36px;
+$res-leading40: 40px;
+$res-leading45: 45px;
+
 /*******************************************************************************
 ******************************* LETTER SPACING *******************************
 *******************************************************************************/
@@ -56,12 +71,24 @@ $space0_28: -0.28px;
 $space0_61: -0.61px;
 $space0_96: -0.96px;
 
+
+$res-space-0_35: -0.35px;
+$res-space-0_44: -0.44px;
+$res-space-0_45: -0.45px;
+$res-space-0_15: -0.15px;
+$res-space-0_72: -0.72px;
+$res-space-0_15: -0.15px;
+$res-space-0_6: -0.6px;
+
+
 /*******************************************************************************
 ******************************* RADIUS *******************************
 *******************************************************************************/
 $radius30: 30px;
 $radius10: 10px;
 $opacity80: 80%;
+
+$res-opacity50: 50%;
 
 /*******************************************************************************
 ******************************* ANIMATION VARIABLES ****************************
