--- a/resources/assets/styles/common/_theme.scss
+++ b/resources/assets/styles/common/_theme.scss
@@ -7,7 +7,14 @@
     padding-left: 15px;
     padding-right: 15px;
   }
+
+
+  &.container2{
+    padding-left: 60px;
+  padding-right: 60px;
+  }
 }
+
 
 .row {
   margin-left: -0px;
@@ -17,25 +24,25 @@
     padding-left: -0px;
     padding-right: -0px;
   }
+}
 
-  &.row10 {
-    margin-left: -10px;
-    margin-right: -10px;
+.row10 {
+  margin-left: -10px;
+  margin-right: -10px;
 
-    &>* {
-      padding-left: 10px;
-      padding-right: 10px;
-    }
+  &>* {
+    padding-left: 10px;
+    padding-right: 10px;
   }
+}
 
-  &.row8 {
-    margin-left: -8px;
-    margin-right: -8px;
+.row8 {
+  margin-left: -8px;
+  margin-right: -8px;
 
-    &>* {
-      padding-left: 8px;
-      padding-right: 8px;
-    }
+  &>* {
+    padding-left: 8px;
+    padding-right: 8px;
   }
 }
 
