--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -12,7 +12,7 @@ button,
     height: 49px;
     padding-left: 30px;
     padding-right: 30px;
-    border-radius: 0px 30px 30px 30px;
+    border-radius: 0px $radius30 $radius30 $radius30;
 
     &.bg-06556C-btn {
         background-color: $color-06556c;
@@ -66,7 +66,7 @@ button,
     height: 51px;
     padding-left: 48px;
     padding-right: 48px;
-    border-radius: 30px 0px 30px 30px;
+    border-radius: $radius30 0px $radius30 $radius30;
 
     &.bg-f07a47-white-text-btn {
         background-color: $color-f07a47;
