--- a/resources/assets/styles/pages/_project-open.scss
+++ b/resources/assets/styles/pages/_project-open.scss
@@ -65,6 +65,7 @@
 
 .related-project-slider-section {
     .related-project-card {
+        // width: 309px;
         .card-layer {
             background: linear-gradient(180deg, rgba(6, 85, 108, 0), rgba(6, 85, 108, 0.3));
             height: 272px;
