--- a/resources/assets/styles/components/_slick.scss
+++ b/resources/assets/styles/components/_slick.scss
@@ -1,4 +1,5 @@
 .hero-slider {
+
     .slick-slide,
     .slick-list,
     .slick-track {
@@ -108,6 +109,25 @@
         .slick-slide {
             padding-left: 8px;
             padding-right: 8px;
+            width: 309px !important;
+            // transition: all 0.4s ease;
+
+            .related-project-card {
+                width: 309px !important;
+                transition: width 0.4s ease;
+            }
+
+            &.slick-current {
+                width: 739px !important;
+
+                .related-project-card {
+                    width: 100% !important;
+                }
+            }
+
+            &>div{
+                width: 100% !important;
+            }
         }
     }
 
