--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -2,6 +2,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 //sick
 @import "../../node_modules/slick-carousel/slick/slick.scss";
+@import "../../node_modules/swiper/swiper.css";
 
 @import '../../node_modules/bootstrap/scss/functions';
 @import '../../node_modules/bootstrap/scss/variables';
