--- a/resources/assets/styles/common/_utilities.scss
+++ b/resources/assets/styles/common/_utilities.scss
@@ -389,6 +389,9 @@
     .res-opacity50 {
         opacity: $res-opacity50;
     }
+    .res-radius5{
+        border-radius: $res-radius5;
+    }
 
 }
 
