--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -89,6 +89,7 @@ $radius10: 10px;
 $opacity80: 80%;
 
 $res-opacity50: 50%;
+$res-radius5: 5px;
 
 /*******************************************************************************
 ******************************* ANIMATION VARIABLES ****************************
