--- a/resources/assets/styles/components/_slick.scss
+++ b/resources/assets/styles/components/_slick.scss
@@ -42,7 +42,7 @@
 
         button {
             display: none;
-        }
+        }   
     }
 }
 
@@ -83,23 +83,6 @@
     }
 }
 
-.project-image-slider-section {
-
-    .slick-list {
-        margin-left: -14px;
-        margin-right: -14px;
-
-        .slick-slide {
-            padding-left: 14px;
-            padding-right: 14px;
-        }
-    }
-
-    .project-img {
-        height: 370px;
-    }
-}
-
 .related-project-slider {
     .slick-list {
         overflow: visible;
@@ -109,7 +92,7 @@
         .slick-slide {
             padding-left: 8px;
             padding-right: 8px;
-            width: 309px !important;
+            // width: 309px !important;
             // transition: all 0.4s ease;
 
             .related-project-card {
@@ -125,7 +108,7 @@
                 }
             }
 
-            &>div{
+            &>div {
                 width: 100% !important;
             }
         }
@@ -133,6 +116,50 @@
 
     .related-project-img {
         height: 465px;
+    }
+}
+
+.project-image-slider-section {
+    .slick-list {
+        height: 100%;
+        margin-left: -14px;
+        margin-right: -14px;
+
+        @include media-breakpoint-down(lg) {
+            overflow: visible !important;
+            margin-left: -5px !important;
+            margin-right: -5px !important;
+        }
+
+        .slick-track {
+            height: 100%;
+
+
+            .slick-slide {
+                height: 100%;
+                padding-left: 14px;
+                padding-right: 14px;
+
+                @include media-breakpoint-down(lg) {
+                    padding-left: 5px !important;
+                    padding-right: 5px !important;
+                }
+
+                &>div {
+                    height: 100%;
+                }
+            }
+        }
+    }
+
+    .project-img {
+        height: 370px;
+    }
+
+    .prev-arrow,
+    .next-arrow {
+        width: 34px;
+        height: 34px;
     }
 }
 
