--- a/resources/assets/styles/layouts/_pages.scss
+++ b/resources/assets/styles/layouts/_pages.scss
@@ -4,6 +4,9 @@
         height: 46px;
         border: 1px solid rgba($color: $white, $alpha: 0.2);
 
+
+
+
         .media-img {
             height: 20px;
         }
@@ -11,6 +14,13 @@
         &:last-child {
             margin-right: 0px !important;
         }
+    }
+}
+
+
+.hr-line {
+    @include media-breakpoint-down(lg) {
+        border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
     }
 }
 
