--- a/resources/assets/styles/pages/_contact.scss
+++ b/resources/assets/styles/pages/_contact.scss
@@ -3,3 +3,8 @@ body.contact {
         display: none;
     }
 }
+.contact-us-section{
+    @include media-breakpoint-down(lg){
+        height: auto;
+    }
+}
