--- a/resources/assets/styles/common/_theme.scss
+++ b/resources/assets/styles/common/_theme.scss
@@ -11,6 +11,11 @@
   &.container2 {
     padding-left: 60px;
     padding-right: 60px;
+
+    @include media-breakpoint-down(lg) {
+      padding-left: 15px;
+      padding-right: 15px;
+    }
   }
 }
 
@@ -78,8 +83,8 @@
   }
 
   .px-p-p {
-    padding-left: 25px !important;
-    padding-right: 25px !important;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
   }
 
   .mx-m-0 {
@@ -115,5 +120,15 @@
     text-overflow: initial !important;
     line-clamp: initial !important;
     -webkit-line-clamp: initial !important;
+  }
+
+  .res-row4 {
+    margin-left: -4px;
+    margin-right: -4px;
+
+    &>* {
+      padding-left: 4px;
+      padding-right: 4px;
+    }
   }
 }
