--- a/resources/assets/styles/pages/_project-open.scss
+++ b/resources/assets/styles/pages/_project-open.scss
@@ -1,14 +1,16 @@
 .project-sub-hero-section {
     height: 565px;
 
-    
     @include media-breakpoint-down(lg) {
-      height: 282px;
-      width: 295px;
+        height: 585px;
     }
 
     img {
         border-radius: 0px 0px 0px 500px;
+
+        @include media-breakpoint-down(lg) {
+            border-radius: 0px 0px 0px 250px;
+        }
     }
 
 }
@@ -20,6 +22,12 @@
             font-family: "dmsans-regular";
             font-size: $font22;
             line-height: $leading28;
+
+            @include media-breakpoint-down(lg){
+                font-size: $res-font20;
+                line-height: $res-leading23;
+
+            }
         }
 
         p {
@@ -27,9 +35,12 @@
             font-family: "dmsans-regular";
             line-height: $leading24;
             color: $color-000b18;
+            padding-bottom: 25px;
+          
         }
 
         ul {
+         
             padding-left: 31px;
             list-style-type: none;
 
@@ -40,6 +51,9 @@
                 font-family: "dmsans-regular";
                 line-height: $leading24;
                 color: $color-000b18;
+
+            
+
 
                 &::before {
                     content: '';
@@ -71,6 +85,7 @@
 
 .related-project-slider-section {
     .related-project-card {
+
         // width: 309px;
         .card-layer {
             background: linear-gradient(180deg, rgba(6, 85, 108, 0), rgba(6, 85, 108, 0.3));
@@ -81,9 +96,9 @@
     .related-project-img {
         height: 465px;
 
-        
-    @include media-breakpoint-down(lg) {
-      height: 286px;
+
+        @include media-breakpoint-down(lg) {
+            height: 286px;
+        }
     }
-    }
-} 
+}
